--- a/notebooks/train_player_detector.ipynb
+++ b/notebooks/train_player_detector.ipynb
@@ -12,12 +12,15 @@
    "metadata": {},
    "source": [
     "### Before you start\n",
-    "Use `nvidia-smi` command to see your GPU specs"
+    "Use `nvidia-smi` command to see your GPU specs (only if you have a nvidia GPU, it doesn't work on my macbook)\n",
+    "\n",
+    "This is mostly useful to check if you are working with a GPU environment on Google Colab, if\n",
+    "you receive the msg: 'command not found: nvidia-smi' then you need to change the environment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "bat"
@@ -28,47 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Nov  6 17:03:01 2024       \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 560.94                 Driver Version: 560.94         CUDA Version: 12.6     |\n",
-      "|-----------------------------------------+------------------------+----------------------+\n",
-      "| GPU  Name                  Driver-Model | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                                         |                        |               MIG M. |\n",
-      "|=========================================+========================+======================|\n",
-      "|   0  NVIDIA GeForce GTX 1650 ...  WDDM  |   00000000:2B:00.0  On |                  N/A |\n",
-      "| 26%   29C    P8             10W /  110W |     739MiB /   4096MiB |     14%      Default |\n",
-      "|                                         |                        |                  N/A |\n",
-      "+-----------------------------------------+------------------------+----------------------+\n",
-      "                                                                                         \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| Processes:                                                                              |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-      "|        ID   ID                                                               Usage      |\n",
-      "|=========================================================================================|\n",
-      "|    0   N/A  N/A      3664    C+G   ...on\\130.0.2849.56\\msedgewebview2.exe      N/A      |\n",
-      "|    0   N/A  N/A      3788    C+G   ...5n1h2txyewy\\ShellExperienceHost.exe      N/A      |\n",
-      "|    0   N/A  N/A      4832    C+G   ...ys\\WinUI3Apps\\PowerToys.Peek.UI.exe      N/A      |\n",
-      "|    0   N/A  N/A      6020    C+G   ...CBS_cw5n1h2txyewy\\TextInputHost.exe      N/A      |\n",
-      "|    0   N/A  N/A      6668    C+G   ...crosoft\\Edge\\Application\\msedge.exe      N/A      |\n",
-      "|    0   N/A  N/A      7196    C+G   ...1.0_x64__8wekyb3d8bbwe\\Video.UI.exe      N/A      |\n",
-      "|    0   N/A  N/A      8036    C+G   ...siveControlPanel\\SystemSettings.exe      N/A      |\n",
-      "|    0   N/A  N/A      8384    C+G   ...oogle\\Chrome\\Application\\chrome.exe      N/A      |\n",
-      "|    0   N/A  N/A      8464    C+G   ...Files\\DAEMON Tools Lite\\DTAgent.exe      N/A      |\n",
-      "|    0   N/A  N/A      9456    C+G   ...2txyewy\\StartMenuExperienceHost.exe      N/A      |\n",
-      "|    0   N/A  N/A     10000    C+G   ...oogle\\Chrome\\Application\\chrome.exe      N/A      |\n",
-      "|    0   N/A  N/A     10304    C+G   ...werToys\\PowerToys.PowerLauncher.exe      N/A      |\n",
-      "|    0   N/A  N/A     11460    C+G   ...ekyb3d8bbwe\\PhoneExperienceHost.exe      N/A      |\n",
-      "|    0   N/A  N/A     11964    C+G   ...ir\\CORSAIR iCUE 4 Software\\iCUE.exe      N/A      |\n",
-      "|    0   N/A  N/A     12168    C+G   ...009.0_x64__8wekyb3d8bbwe\\Photos.exe      N/A      |\n",
-      "|    0   N/A  N/A     14236    C+G   ...\\PowerToys\\PowerToys.FancyZones.exe      N/A      |\n",
-      "|    0   N/A  N/A     16000    C+G   ...t.LockApp_cw5n1h2txyewy\\LockApp.exe      N/A      |\n",
-      "|    0   N/A  N/A     16436    C+G   C:\\Windows\\explorer.exe                     N/A      |\n",
-      "|    0   N/A  N/A     17636    C+G   ...009.0_x64__8wekyb3d8bbwe\\Photos.exe      N/A      |\n",
-      "|    0   N/A  N/A     18724    C+G   ....Search_cw5n1h2txyewy\\SearchApp.exe      N/A      |\n",
-      "|    0   N/A  N/A     18912    C+G   ...Programs\\Microsoft VS Code\\Code.exe      N/A      |\n",
-      "|    0   N/A  N/A     19788    C+G   ...al\\Discord\\app-1.0.9169\\Discord.exe      N/A      |\n",
-      "+-----------------------------------------------------------------------------------------+\n"
+      "zsh:1: command not found: nvidia-smi\n"
      ]
     }
    ],
@@ -80,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure which directory you are working on"
+    "Make sure which directory you are working on (useful when working in remote)"
    ]
   },
   {
@@ -92,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\alexa\\OneDrive\\Escritorio\\AI Agency Project\\ComputerVision\\FootballYOLO\n"
+      "/Users/alex/Desktop/IA/Football_Analysis/notebooks\n"
      ]
     }
    ],
@@ -111,13 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "bat"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -q ultralytics roboflow"
    ]
@@ -137,6 +108,7 @@
    "source": [
     "from roboflow import Roboflow\n",
     "from dotenv import find_dotenv, load_dotenv\n",
+    "from google.colab import userdata\n",
     "from IPython.display import Image"
    ]
   },
@@ -148,23 +120,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "run this one only locally"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# find .env automatically by walking up directories until it's found\n",
     "dotenv_path = find_dotenv()\n",
     "\n",
     "# load up the entries as environment variables\n",
-    "load_dotenv(dotenv_path)"
+    "load_dotenv(dotenv_path)\n",
+    "\n",
+    "ROBOFLOW_API_KEY = os.getenv(\"ROBOFLOW_API_KEY\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pull dataset"
+    "run this one only on Google Colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROBOFLOW_API_KEY = userdata.get('ROBOFLOW_API_KEY')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pull dataset from roboflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "run this one only locally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/alex/Desktop/IA/Football_Analysis\n",
+      "mkdir: datasets: File exists\n",
+      "/Users/alex/Desktop/IA/Football_Analysis/datasets\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd ..\n",
+    "!mkdir datasets\n",
+    "%cd datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "run this one only on google colab"
    ]
   },
   {
@@ -185,21 +232,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataset is already prepared for model training"
+    "This dataset is already prepared for model training, we use yolov5 because is the one that\n",
+    "works better recognizing the ball"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading Roboflow workspace...\n",
+      "loading Roboflow project...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading Dataset Version Zip in football-players-detection-1 to yolov5pytorch:: 100%|██████████| 148663/148663 [00:05<00:00, 29579.67it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Extracting Dataset Version Zip to football-players-detection-1 in yolov5pytorch:: 100%|██████████| 1338/1338 [00:00<00:00, 2191.53it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "ROBOFLOW_API_KEY = os.getenv(\"ROBOFLOW_API_KEY\")\n",
     "rf = Roboflow(api_key=ROBOFLOW_API_KEY)\n",
     "\n",
     "project = rf.workspace(\"roboflow-jvuqo\").project(\"football-players-detection-3zvbc\")\n",
-    "version = project.version(12)\n",
-    "dataset = version.download(\"yolov8\")"
+    "version = project.version(1)\n",
+    "dataset = version.download(\"yolov5\")"
    ]
   },
   {
@@ -211,16 +289,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "bat"
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'football-players-detection-1/football-players-detection-1/valid'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "!sed -i 's|\\(train: \\).*|\\1../train/images|' {dataset.location}/data.yaml\n",
-    "!sed -i 's|\\(val: \\).*|\\1../valid/images|' {dataset.location}/data.yaml"
+    "import shutil\n",
+    "\n",
+    "shutil.move('football-players-detection-1/train',\n",
+    "            'football-players-detection-1/football-players-detection-1/train')\n",
+    "\n",
+    "shutil.move('football-players-detection-1/test',\n",
+    "            'football-players-detection-1/football-players-detection-1/test')\n",
+    "\n",
+    "shutil.move('football-players-detection-1/valid',\n",
+    "            'football-players-detection-1/football-players-detection-1/valid')"
    ]
   },
   {
@@ -234,7 +327,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using big image size to detect the ball consistently. 24 GiB of GPU memory is needed to run this training. We can download a pre-trained model if we don't have access to this hardware."
+    "Using big image size to detect the ball consistently (`imgsz=1280`, `epochs=50`, `batch=6`). 24 GiB of GPU memory is needed to run this training. We can download a pre-trained model if we don't have access to this hardware.\n",
+    "\n",
+    "But to try the process of training a model we can set a smaller model and image size. (I only runned this code on Google Colab)"
    ]
   },
   {
@@ -249,7 +344,7 @@
    "source": [
     "%cd {HOME}\n",
     "\n",
-    "!yolo task=detect mode=train model=yolov8x.pt data={dataset.location}/data.yaml batch=6 epochs=50 imgsz=1280 plots=True"
+    "!yolo task=detect mode=train model=yolov5x.pt data={dataset.location}/data.yaml epochs=100 imgsz=640"
    ]
   },
   {
